# oneseismic

./: .dockerignore  .gitignore  README.md  docker-compose.yml  docker-compose_tests.yml
.github/workflows/: api.yml  ci.yaml
api/: Dockerfile  go.mod  go.sum  main.go
api/api/: result.go
api/cmd/mock_core/: main.go
api/cmd/query/: main.go
api/internal/auth/: openid.go  openid_test.go
api/server/: multiplexer.go  server.go  server_test.go  sliceController.go  sliceController_test.go  sliceModel.go  storeController.go
client/oneseismic/: client.py
python/oneseismic/client/: client.py
python/oneseismic/login/: login.py
rapi/: Cargo.toml  Dockerfile  build.rs
rapi/src/: auth.rs  config.rs  errors.rs  handlers.rs  main.rs  multiplexer.rs  openid.rs  slice_handler.rs  slice_model.rs  slicer.rs  state.rs  store.rs
tests/: Dockerfile  integration_tests.py
tests/integration/: Dockerfile  integration_tests.py
tests/ssl/: auth.pem  gen.sh  localhost.pem
