[package]
name = "rapi"
version = "0.1.0"
authors = ["Kjell Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1"
actix-web = "2"
actix-service = "1"
dotenv = "0.15"
envy = "0.4"
lazy_static = "1"
jsonwebtoken = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
actix-web-httpauth = "0.4"
reqwest = { version = "0.10", features = ["json"] }
log="0.4"

[dev-dependencies]
actix-http-test = "0.2"
mockito="0.23"
openssl = "0.10"
